--- a/css/estilos.css
+++ b/css/estilos.css
@@ -51,7 +51,7 @@ img{
     align-items: center;
     min-height: 100vh;
     padding: 50px 0 0 0;
-  
+   margin-right: -9px;
 }
 
 .menu{
@@ -715,7 +715,7 @@ padding: 20px;
         flex-direction: column;
         align-items: center;
         background-color: #ffffff;
-        min-width: 100%;
+        min-width: 95%;
     }
     .ofert-img{
         order: 2;
