--- a/css/estilos.css
+++ b/css/estilos.css
@@ -51,7 +51,7 @@ img{
     align-items: center;
     min-height: 100vh;
     padding: 50px 0 0 0;
-   margin-right: -9px;
+ /* margin-right: -9px;*/
 }
 
 .menu{
@@ -567,6 +567,11 @@ margin: 10px 10px -25px 10px;
 
 
 @media (max-width:991px){
+
+
+    .container{
+        width: 96%;
+    }
     .menu{
         background-color: rgba(0, 0, 0, 0.527);
         padding: 10px;
@@ -784,6 +789,10 @@ padding: 20px;
 /*--------Responsive Menor---------*/
 
 @media (max-width:767px){
+
+    .container{
+        width: 99%;
+    }
     .header-txt{
         text-align: center;
     
@@ -850,12 +859,18 @@ padding: 20px;
 }
 
 @media screen and (max-width:600px){
+    .container{
+        width: 100%;
+    }
     .ofert-img{
         height: 70%;
         width: 70%;
     }
 }
 @media screen and (max-width:480px) {
+    .container{
+        max-width: 100%;
+    }
     .ofert-img{
         height: 50%;
         width: 80%;
